# daml

./: BAZEL.md  BUILD  WORKSPACE  build.ps1  build.sh  deps.bzl  stack-snapshot.yaml  unreleased.rst
bazel_tools/: haskell-cabal-run-shell.patch  haskell-cc-wrapper-windows-skip-missing.patch  haskell-cc-wrapper.patch  haskell-ghci-grpc.patch  haskell-render-env.patch  haskell-stack-update.patch  haskell-stack-vendored.patch  haskell-stack-windows-architecture.patch  haskell-stack-windows-support.patch  haskell-stackage.patch  haskell-windows-library-dirs.patch  haskell.bzl
bazel_tools/client_server_test/runner/: BUILD.bazel
compiler/daml-lf-ast/: BUILD.bazel
compiler/daml-lf-proto/: BUILD.bazel
compiler/daml-lf-reader/: BUILD.bazel
compiler/daml-lf-tools/: BUILD.bazel
compiler/damlc/: BUILD.bazel
compiler/damlc/daml-compiler/: BUILD.bazel
compiler/damlc/daml-doc/: BUILD.bazel
compiler/damlc/daml-doctest/: BUILD.bazel
compiler/damlc/daml-ide/: BUILD.bazel
compiler/damlc/daml-ide-core/: BUILD.bazel
compiler/damlc/daml-lf-conversion/: BUILD.bazel
compiler/damlc/daml-opts/: BUILD.bazel
compiler/damlc/daml-preprocessor/: BUILD.bazel
compiler/damlc/daml-visual/: BUILD.bazel
compiler/damlc/ide-debug-driver/: BUILD.bazel
compiler/damlc/lib/DA/Cli/: Args.hs  Damlc.hs
compiler/damlc/tests/: BUILD.bazel  util.bzl
compiler/damlc/tests/src/: CliParser.hs
compiler/hie-core/: BUILD.bazel  README.md
compiler/hie-core/test/: BUILD.bazel
compiler/lsp-tests/: BUILD.bazel
compiler/scenario-service/client/: BUILD.bazel
compiler/scenario-service/protos/: BUILD.bazel
daml-assistant/: BUILD.bazel
daml-assistant/daml-helper/: BUILD.bazel
daml-assistant/integration-tests/: BUILD.bazel
daml-lf/archive/: BUILD.bazel
dev-env/windows/manifests/: msys2.json
docs/source/tools/: assistant.rst
docs/source/tools/ledger-api-test-tool/: index.rst
language-support/hs/bindings/: BUILD.bazel
language-support/hs/bindings/examples/chat/: BUILD.bazel
language-support/hs/bindings/examples/nim/: BUILD.bazel
ledger-api/grpc-definitions/: BUILD.bazel
libs-haskell/bazel-runfiles/: BUILD.bazel
libs-haskell/da-hs-base/: BUILD.bazel
libs-haskell/test-utils/: BUILD.bazel
notices-gen/: BUILD.bazel
release/: BUILD.bazel
release/windows-installer/: BUILD.bazel
templates/: BUILD.bazel  default-dlint-yaml
