# Copyright (c) 2019 The DAML Authors. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//bazel_tools:haskell.bzl", "da_haskell_library")

da_haskell_library(
    name = "daml-lf-proto",
    srcs = glob(["src/**/*.hs"]),
    src_strip_prefix = "src",
    stackage_deps = [
        "base",
        "bytestring",
        "containers",
        "cryptonite",
        "either",
        "lens",
        "memory",
        "mtl",
        "proto3-suite",
        "scientific",
        "template-haskell",
        "text",
        "transformers",
        "vector",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//compiler/daml-lf-ast",
        "//daml-lf/archive:daml_lf_haskell_proto",
        "//libs-haskell/da-hs-base",
    ],
)
