# Copyright (c) 2019 The DAML Authors. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//bazel_tools:haskell.bzl", "da_haskell_library")

da_haskell_library(
    name = "daml-doctest",
    srcs = glob(["src/**/*.hs"]),
    src_strip_prefix = "src",
    stackage_deps = [
        "base",
        "deepseq",
        "ghc-lib",
        "ghc-lib-parser",
        "syb",
        "text",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//compiler/hie-core",
    ],
)
