# Copyright (c) 2019 The DAML Authors. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:haskell.bzl",
    "da_haskell_library",
)

da_haskell_library(
    name = "daml-preprocessor",
    srcs = glob(["src/**/*.hs"]),
    src_strip_prefix = "src",
    stackage_deps = [
        "base",
        "bytestring",
        "containers",
        "directory",
        "extra",
        "filepath",
        "ghc-lib-parser",
        "ghc-lib",
        "lens",
        "mtl",
        "recursion-schemes",
        "safe",
        "text",
        "uniplate",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:sdk-version-hs-lib",
        "//compiler/daml-lf-ast",
        "//compiler/daml-lf-proto",
        "//compiler/daml-lf-tools",
        "//compiler/hie-core",
        "//libs-haskell/bazel-runfiles",
        "//libs-haskell/da-hs-base",
    ],
)
